--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://anggiburox.github.io/tes-pro/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.13",
@@ -15,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "gh-pages": "^6.2.0",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.5"
   }
