--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
