--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "homepage": "https://anggiburox.github.io/tes-pro/",
+  "homepage": "https://anggiburox.github.io/portofolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
